# lamtat-mcp-server

./: .env  Dockerfile  README.md  doc.b64  pyproject.toml  server.py
copilot/: .workspace
copilot/lamtat-mcp-server/: manifest.yml
copilot/lamtat-mcp-server-app/: manifest.yml
copilot/pipelines/lamtat-mcp-server-main/: buildspec.yml  manifest.yml
scripts/: deploy.sh  destroy.sh  runlocal-docker.sh  runlocal.sh
