[project]
name = "lamtat-mcp-server"
version = "0.1.0"
description = "Minimal FastMCP server exposing simple MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.0.4",
    "boto3>=1.35",
    "opensearch-py>=2.6",
    "docling>=0.0.12",
]

[project.scripts]
lamtat-mcp-server = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
